--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".Decryption" />
         <activity android:name=".About" />
         <activity android:name=".AboutAES" />
+        <activity android:name=".Saved_Keys" />
     </application>
 
 </manifest>
